Stopped blue outline appearing on mobile

--- a/style.css
+++ b/style.css
@@ -61,6 +61,16 @@
   p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
   }
+
+  /* Stop blue outline from appearing on mobile */
+
+  input,
+textarea,
+button,
+select,
+a {
+    -webkit-tap-highlight-color: transparent;
+}
   
 /* Generic styles */
 
